# mrm-toolkit

./: .gitignore  README.md  build_backend.py  pyproject.toml
modular_research_doc_writer/: __init__.py  cli.py  installer.py
modular_research_doc_writer/core/: adapter.py  assembler.py  indexer.py  validator.py
modular_research_doc_writer/skills/modular-research-doc-writer/: SKILL.md
mrm-toolkit/: README.md  manifest.yaml
mrm-toolkit/adapters/agent-ide/: AGENT-RULES.md
mrm-toolkit/adapters/claude/: CLAUDE.md
mrm-toolkit/adapters/codex/: AGENTS.md
mrm-toolkit/adapters/copilot/: copilot-instructions.md
mrm-toolkit/adapters/cursor/: mrm.mdc
mrm-toolkit/adapters/gemini/: GEMINI.md
mrm-toolkit/contracts/: OUTPUT-CONTRACT.md  QUALITY-RUBRIC.md
mrm-toolkit/docs/: MRM-Skill-ModularResearchDocWriter.md  UPGRADE-PLAN-AgentSkill.md  index.md  integration-01-overview.md  integration-02-chat-agents.md  integration-03-vscode.md  integration-04-obsidian.md  integration-05-cursor.md  integration-06-copilot.md  integration-07-custom-agent.md  integration-08-cicd.md  integration-09-best-practices.md
mrm-toolkit/integration/: AGENT-INTEGRATION-GUIDE.md
mrm-toolkit/prompts/: quickstart-prompts.md
mrm-toolkit/research/: index.md
mrm-toolkit/research/core/: core-01-atomic-structure.md  core-02-progressive-disclosure.md
mrm-toolkit/scripts/: mrm_validator.py
mrm-toolkit/templates/: note-template.md
mrm-toolkit/workflows/: MRM-WORKFLOW.md
scripts/: install-skill.ps1  install-skill.sh
tests/: test_parser.py
web/: index.html  script.js  style.css
(+7 files in other folders)
